--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
     <artifactId>todo-simple</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>todo-simple</name>
-    <description>极简TODO应用</description>
+    <description>TODO-List</description>
 
     <properties>
-        <java.version>11</java.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -33,23 +33,41 @@
         </dependency>
 
         <!-- JPA依赖 -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--        </dependency>-->
+        <!-- MyBatis依赖 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.3.1</version>
         </dependency>
 
-        <!-- H2数据库 -->
+        <!-- SQLite JDBC驱动 -->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.45.1.0</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.gwenn</groupId>-->
+<!--            <artifactId>sqlite-dialect</artifactId>-->
+<!--            <version>0.1.2</version>-->
+<!--        </dependency>-->
 
-        <!-- 简化代码 -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!-- 连接池 -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>9.0.85</version>
         </dependency>
 
         <!-- 测试依赖 -->
