修改标签不显示的问题

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,8 @@ mybatis:
   configuration:
     # 下划线转驼峰
     map-underscore-to-camel-case: true
+    # 启用完全自动映射
+    auto-mapping-behavior: full
     # 开启缓存
     cache-enabled: true
     # 日志实现
